add mv command & test cases