@@ -1,14 +1,14 @@
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.io.TempDir;
-import org.os.Example;
 import org.junit.jupiter.api.Test;
 import org.os.nour;
 
-import java.io.File;
-import java.io.IOException;
+import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -18,13 +18,11 @@ public class nourTest {
     class catCommandTest {
         @Test
         public void testCatWithFiles(@TempDir Path tempDir) throws IOException {
-            // create 2 temp files and store in data in them
             Path file1 = Files.createFile(tempDir.resolve("file1.txt"));
             Path file2 = Files.createFile(tempDir.resolve("file2.txt"));
             Files.writeString(file1, "file1\n");
             Files.writeString(file2, "file2\n");
 
-            // calculate result to be asserted
             String result = nour.cat(new String[]{file1.toString(), file2.toString()});
 
             String expectedOutput = "file1\nfile2\n"; // verify output
@@ -33,32 +31,49 @@ public class nourTest {
     }
 
     @Nested
-    class forwardArrowTest {
-        @Test
-        // test 1: write content to existing file
-        public void testForwardArrowWritesContentToFile(@TempDir Path tempDir) throws IOException {
-            Path tempFile = tempDir.resolve("testFile.txt"); // create temp file for testing
-            String content = "test content.";
-            nour.forwardArrow(content, tempFile.toString()); // write content to that file
-            String fileContent = Files.readString(tempFile); // get content from file and check it is equal what you wrote
-            assertEquals(content, fileContent, "Content in the file should match the input content.");
+    class ForwardArrowTest {
+
+        private final String fileName = "testFile.txt";
+
+        @BeforeEach
+        void setUp() throws IOException {
+            File file = new File(fileName);
+            if (!file.exists()) {
+                file.createNewFile();
+            }
+        }
+
+        @AfterEach
+        void tearDown() {
+            File file = new File(fileName);
+            if (file.exists()) {
+                file.delete();
+            }
         }
 
         @Test
-        public void testForwardArrowCreatesFileIfNotExists(@TempDir Path tempDir) {
-            Path tempFile = tempDir.resolve("newFile.txt");
-            String content = "Sample content";
+        void testForwardArrowWritesContentToFile() throws IOException {
+            String[] args = {"ignored", "Hello, world!", fileName};
 
-            assertTrue(Files.notExists(tempFile));
-            nour.forwardArrow(content, tempFile.toString());
+            nour.forwardArrow(args);
 
-            assertTrue(Files.exists(tempFile), "File should be created by forwardArrow method");
-            try {
-                String fileContent = Files.readString(tempFile);
-                assertEquals(content, fileContent, "Content in created file should match the input content");
-            } catch (IOException e) {
-                e.getMessage();
-            }
+            String content = new String(Files.readAllBytes(Paths.get(fileName)));
+
+            assertEquals("Hello, world!", content, "The content in the file should match the input.");
+        }
+
+        @Test
+        void testForwardArrowEmptyContent() throws IOException {
+            String[] args = {"ignored", "", fileName};
+            nour.forwardArrow(args);
+            String content = new String(Files.readAllBytes(Paths.get(fileName)));
+            assertEquals("", content, "The file should be empty if no content is provided.");
+        }
+
+        @Test
+        void testForwardArrowNullArgs() {
+            assertThrows(NullPointerException.class, () -> nour.forwardArrow(null),
+                    "NullPointerException expected when args is null.");
         }
     }
 
@@ -69,66 +84,104 @@ public class nourTest {
 
         @BeforeEach
         void setUp() {
-            // Store the initial directory and home directory for restoring purposes.
             initialDir = System.getProperty("user.dir");
             homeDir = System.getProperty("user.home");
         }
 
         @Test
         void testChangeToParentDirectory() {
-            // Change to a subdirectory, then use `cd("..")` to go back to the parent directory.
             File testSubDir = new File(initialDir, "testSubDir");
             assertTrue(testSubDir.mkdir(), "Failed to create test subdirectory");
 
             System.setProperty("user.dir", testSubDir.getAbsolutePath());
             assertEquals(testSubDir.getAbsolutePath(), System.getProperty("user.dir"));
 
-            nour.cd("..");
+            nour.cd(new String[]{"ignored", ".."});
             assertEquals(initialDir, System.getProperty("user.dir"));
 
-            // Cleanup
             assertTrue(testSubDir.delete(), "Failed to delete test subdirectory");
         }
 
         @Test
         void testChangeToHomeDirectory() {
-            // Use `cd("~")` and verify that the directory changes to the home directory.
             System.setProperty("user.dir", initialDir);  // Reset to initial directory
 
-            nour.cd("~");
+            nour.cd(new String[]{"ignored", "~"});
             assertEquals(homeDir, System.getProperty("user.dir"));
         }
 
         @Test
         void testChangeToSpecificExistingDirectory() {
-            // Create a specific directory, change into it, and verify.
             File specificDir = new File(initialDir, "specificDir");
             assertTrue(specificDir.mkdir(), "Failed to create specific directory");
 
-            nour.cd("specificDir");
+            nour.cd(new String[]{"ignored", "specificDir"});
             assertEquals(specificDir.getAbsolutePath(), System.getProperty("user.dir"));
 
-            // Cleanup
             assertTrue(specificDir.delete(), "Failed to delete specific directory");
         }
 
         @Test
         void testErrorForNonExistingDirectory() {
-            // Attempt to change to a non-existing directory and check for error handling.
             System.setProperty("user.dir", initialDir);  // Reset to initial directory
 
-            nour.cd("nonExistentDir");
+            nour.cd(new String[]{"ignored", "nonExistentDir"});
             assertEquals(initialDir, System.getProperty("user.dir"));
         }
 
         @Test
         void testErrorForNoParentDirectory() {
-            // Attempt to go to the parent directory from the root directory, which has no parent.
-            System.setProperty("user.dir", "/");  // Setting to root (on UNIX-like systems)
+            System.setProperty("user.dir", "/");
 
-            nour.cd("..");
+            nour.cd(new String[]{"ignored", ".."});
             assertEquals("/", System.getProperty("user.dir"));
         }
+    }
 
+    @Nested
+    class fileMoveTest {
+        private final String sourceFileName = "sourceTestFile.txt";
+        private final String destFileName = "destTestFile.txt";
+
+        @BeforeEach
+        void setUp() throws IOException {
+            FileWriter writer = new FileWriter(sourceFileName);
+            writer.write("This is a test file.");
+            writer.close();
+        }
+
+        @AfterEach
+        void tearDown() {
+            File sourceFile = new File(sourceFileName);
+            File destFile = new File(destFileName);
+            if (sourceFile.exists()) sourceFile.delete();
+            if (destFile.exists()) destFile.delete();
+        }
+
+        @Test
+        void testMissingDestinationOperand() {
+            String[] args = {"ignored", sourceFileName};
+            ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+            System.setOut(new PrintStream(outputStream));
+            nour.mv(args);
+            assertTrue(outputStream.toString().contains("mv: missing destination file operand"),
+                    "Should warn about missing destination operand.");
+        }
+
+        @Test
+        void testFileMovedSuccessfully() throws IOException {
+            String[] args = {"ignored", sourceFileName, destFileName};
+            ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+            System.setOut(new PrintStream(outputStream));
+            nour.mv(args);
+            File destFile = new File(destFileName);
+            assertTrue(destFile.exists(), "Destination file should exist after moving.");
+            String content = new String(Files.readAllBytes(destFile.toPath()));
+            assertEquals("This is a test file." + System.lineSeparator(), content, "File content should match.");
+            File sourceFile = new File(sourceFileName);
+            assertFalse(sourceFile.exists(), "Source file should be deleted after moving.");
+            assertTrue(outputStream.toString().contains("File moved successfully and original file deleted."),
+                    "Output should confirm successful file move and deletion.");
+        }
     }
 }
